--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 REACT_APP_domain=dev-kvpw313x.eu.auth0.com
 REACT_APP_clientId=0VQNfIGIQx9m81Gwrn7VzuwGYxMFIEbl
+REACT_APP_URL=http://localhost:3010/
