--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.2",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
+    "react-calendar": "^3.8.0",
     "react-cookie": "4.0.3",
     "react-cookies": "0.1.1",
     "react-dom": "^18.0.0",
