--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-REACT_APP_domain=dev-kvpw313x.eu.auth0.com
-REACT_APP_clientId=0VQNfIGIQx9m81Gwrn7VzuwGYxMFIEbl
+REACT_APP_domain=dev-sbz86mzb.us.auth0.com
+REACT_APP_clientId=Xn2tcfMkJQ95ZSHTk3Sd0uYDMWa18h8z
