--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "0.21.1",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.2",
+    "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-calendar": "^3.8.0",
