--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.10.4",
+    "@mui/material": "^5.10.5",
     "@mui/styled-engine-sc": "^5.10.3",
+    "@mui/x-data-grid": "^5.17.2",
+    "@mui/x-data-grid-generator": "^5.17.2",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.8.0",
@@ -21,9 +23,13 @@
     "react-calendar": "^3.8.0",
     "react-cookie": "4.0.3",
     "react-cookies": "0.1.1",
+    "react-data-grid": "^7.0.0-beta.16",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
